--- a/public/brokers.html
+++ b/public/brokers.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brokers • Trading Agent</title>
     <link rel="stylesheet" href="/styles-v4.css" />
+    <script src="/ui.js" defer></script>
     <style>
       /* ============================
          Brokers page — premium skin
