--- a/public/outcomes.html
+++ b/public/outcomes.html
@@ -6,6 +6,7 @@
     <title>Outcomes • Trading Agent</title>
 
     <link rel="stylesheet" href="/styles-v4.css" />
+    <script src="/ui.js" defer></script>
   </head>
 
   <body>
