--- a/public/backtest.html
+++ b/public/backtest.html
@@ -2,19 +2,196 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Backtest • Trading Agent</title>
 
     <link rel="stylesheet" href="/styles-v4.css" />
+    <script src="/ui.js" defer></script>
+
+    <!-- UI-only, scoped to backtest page (strong overrides to beat styles-v4.css) -->
+    <style>
+      /* ===== Layout symmetry ===== */
+      .page-backtest .bt-config-layout{
+        display:grid !important;
+        grid-template-columns: 1fr 1fr !important;
+        gap: 18px !important;
+        align-items: stretch !important;
+      }
+
+      .page-backtest .bt-config-left,
+      .page-backtest .bt-config-right{
+        display:flex !important;
+        flex-direction:column !important;
+        min-width: 0 !important;
+      }
+
+      /* Make both sides start at the same visual level */
+      .page-backtest .bt-config-left .bt-config-extras,
+      .page-backtest .bt-config-right{
+        padding-top: 0 !important;
+        margin-top: 0 !important;
+      }
+
+      /* Left “Tickers” area should fill its half (no weird vertical gaps) */
+      .page-backtest .bt-config-left .bt-config-extras{
+        height: 100% !important;
+        display:flex !important;
+        flex-direction:column !important;
+        justify-content:flex-start !important;
+      }
+
+      /* Right form grid spacing */
+      .page-backtest .bt-config-grid{
+        margin-top: 10px !important;
+      }
+
+      /* ===== Hide the original select but keep it for JS ===== */
+      .page-backtest #tickersSelect{
+        position:absolute !important;
+        left:-9999px !important;
+        width:1px !important;
+        height:1px !important;
+        overflow:hidden !important;
+        opacity:0 !important;
+        pointer-events:none !important;
+      }
+
+      /* ===== Chips UI ===== */
+      .page-backtest .bt-tickerChips{
+        display:flex !important;
+        flex-wrap:wrap !important;
+        gap: 10px !important;
+        align-content:flex-start !important;
+        padding-top: 6px !important;
+
+        /* auto-size via CSS vars set by JS */
+        --chipFont: 14px;
+        --chipPadY: 10px;
+        --chipPadX: 12px;
+        --chipRadius: 999px;
+      }
+
+      .page-backtest .bt-chip{
+        display:inline-flex !important;
+        align-items:center !important;
+        justify-content:center !important;
+
+        font-size: var(--chipFont) !important;
+        font-weight: 800 !important;
+        letter-spacing: 0.02em !important;
+        padding: var(--chipPadY) var(--chipPadX) !important;
+        border-radius: var(--chipRadius) !important;
+
+        border: 1px solid rgba(255,255,255,0.10) !important;
+        background: rgba(255,255,255,0.06) !important;
+        color: var(--text) !important;
+
+        cursor:pointer !important;
+        user-select:none !important;
+        transition: transform .12s ease, background .12s ease, border-color .12s ease !important;
+      }
+
+      .page-backtest .bt-chip:hover{
+        transform: translateY(-1px) !important;
+        background: rgba(255,255,255,0.08) !important;
+        border-color: rgba(255,255,255,0.14) !important;
+      }
+
+      .page-backtest .bt-chip.is-on{
+        background: rgba(93,169,255,0.16) !important;
+        border-color: rgba(93,169,255,0.26) !important;
+      }
+
+      .page-backtest .bt-tickerActions{
+        margin-top: 12px !important;
+        display:flex !important;
+        gap: 10px !important;
+        flex-wrap:wrap !important;
+      }
+
+      /* ===== Idle/meta: remove “boxed block” look entirely ===== */
+      .page-backtest .bt-statusRow{
+        display:flex !important;
+        align-items:center !important;
+        justify-content:flex-start !important;
+        gap: 12px !important;
+
+        margin-top: 12px !important;
+        padding: 0 !important;
+
+        border: 0 !important;
+        background: transparent !important;
+        box-shadow: none !important;
+        border-radius: 0 !important;
+      }
+
+      /* Force-pill only (no surrounding container styling) */
+      .page-backtest #btStatusPill{
+        margin: 0 !important;
+      }
+
+      .page-backtest #runMeta{
+        flex: 1 !important;
+        min-width: 0 !important;
+        white-space: nowrap !important;
+        overflow: hidden !important;
+        text-overflow: ellipsis !important;
+      }
+
+      /* Keep run button from visually “creating” a lower block */
+      .page-backtest .bt-runCell{
+        display:flex !important;
+        flex-direction:column !important;
+        justify-content:flex-end !important;
+      }
+
+      @media (max-width: 980px){
+        .page-backtest .bt-config-layout{ grid-template-columns: 1fr !important; }
+      }
+
+      /* =========================
+   REMOVE THIN GREY DIVIDER
+========================= */
+
+/* Kill any top border that may be drawing the slim line */
+.page-backtest .bt-config-left .bt-config-extras,
+.page-backtest .bt-config-left .bt-tickersBlock {
+  border-top: 0 !important;
+  box-shadow: none !important;
+}
+
+/* In case it's a pseudo-element */
+.page-backtest .bt-config-left .bt-config-extras::before,
+.page-backtest .bt-config-left .bt-tickersBlock::before {
+  display: none !important;
+  content: none !important;
+}
+
+
+/* =========================
+   ADD EVEN BOTTOM SPACING
+========================= */
+
+/* Add bottom padding equal to top padding */
+.page-backtest .bt-config-left .bt-config-extras {
+  padding-bottom: 16px !important;
+}
+
+/* Ensure space between chips and bottom of box */
+.page-backtest .bt-tickerActions {
+  margin-bottom: 4px !important;
+}
+    </style>
   </head>
 
   <body>
-    <div class="app">
+    <div class="bg-wash"></div>
 
-      <header class="topbar">
+    <header class="topbar">
+      <div class="topbar-left">
         <div class="brand">
-          <span class="dot"></span>
-          <span class="brand-name">Trading Agent</span>
+          <div class="brand-dot"></div>
+          <div class="brand-text">Trading Agent</div>
         </div>
 
         <nav class="tabs">
@@ -24,84 +201,123 @@
           <a class="tab" href="/rules">Rules</a>
           <a class="tab active" href="/backtest">Backtest</a>
         </nav>
+      </div>
 
-        <div class="right">
-          <span class="pill" id="dataLivePill">Realtime</span>
+      <div class="topbar-right">
+        <div class="status">
+          <div class="status-dot" id="socketDot"></div>
+          <div class="status-text">Realtime</div>
         </div>
-      </header>
 
-      <main class="content">
+        <button class="btn btn-ghost" id="themeToggle" aria-label="Toggle theme">🌙</button>
+      </div>
+    </header>
 
-        <div class="grid-2">
-          <div class="card">
-            <div class="card-head">
-              <div>
-                <div class="card-title">Backtest</div>
-                <div class="card-hint">Run strategy simulations on historical 1m bars (resampled for larger timeframes).</div>
-              </div>
+    <main class="shell page-backtest">
+      <section class="stack">
 
-              <div class="card-actions">
-                <button class="btn" id="refreshBtn">Reset</button>
-                <button class="btn primary" id="runBtn">Run</button>
-              </div>
+        <!-- BACKTEST CONFIGURATION -->
+        <section class="card bt-card bt-config">
+          <div class="card-head bt-card-head">
+            <div>
+              <div class="card-title">Backtest Configuration</div>
             </div>
 
-            <div class="form-grid" style="margin-top: 12px;">
-              <label class="small">
-                Strategy
-                <select id="strategySelect" class="input" style="width:100%; margin-top:6px;">
-                  <option value="active">Active strategy</option>
-                </select>
-                <div class="card-hint" style="margin-top:6px;">Choose a saved strategy version or use the active one.</div>
-              </label>
-
-              <label class="small">
-                Tickers
-                <select id="tickersSelect" class="input" multiple style="width:100%; height: 110px; margin-top:6px;"></select>
-                <div class="card-hint" style="margin-top:6px;">Pulled from Watchlist.</div>
-              </label>
-
-              <label class="small" style="display:block;">
-                Timeframe
-                <select id="timeframeSelect" class="input" style="width:100%; margin-top:6px;">
-                  <option value="1m">1m</option>
-                  <option value="2m">2m</option>
-                  <option value="5m">5m</option>
-                  <option value="15m">15m</option>
-                  <option value="30m">30m</option>
-                  <option value="1h">1h</option>
-                  <option value="4h">4h</option>
-                  <option value="1d">1d</option>
-                  <option value="1w">1w</option>
-                </select>
-                <div class="card-hint" style="margin-top:6px;">All timeframes are resampled from 1m.</div>
-              </label>
-
-              <label class="small">
-                Start date (NY)
-                <input id="startDate" class="input" type="date" style="width:100%; margin-top:6px;" />
-              </label>
-
-              <label class="small">
-                End date (NY)
-                <input id="endDate" class="input" type="date" style="width:100%; margin-top:6px;" />
-              </label>
-            </div>
-
-            <div style="margin-top: 12px; display:flex; gap:10px; align-items:center;">
-              <span id="btStatusPill" class="pill pill-idle">Idle</span>
-              <span id="runMeta" class="small muted"></span>
+            <div class="card-actions bt-config-actions">
+              <button class="btn" id="refreshBtn">Reset</button>
             </div>
           </div>
 
-          <div class="card">
-            <div class="card-head">
-              <div>
-                <div class="card-title">Metrics</div>
-                <div class="card-hint">Summary statistics for the last run.</div>
+          <div class="bt-config-body">
+            <div class="bt-config-layout">
+
+              <!-- LEFT: Tickers (chips) -->
+              <div class="bt-config-left">
+                <div class="bt-config-extras">
+                  <div class="bt-tickersBlock">
+                    <div class="bt-label">Tickers</div>
+
+                    <!-- Keep select for JS hooks (hidden via CSS) -->
+                    <select id="tickersSelect" class="input bt-input" multiple></select>
+
+                    <!-- Chips UI -->
+                    <div class="bt-tickerChips" id="btTickerChips" aria-label="Tickers"></div>
+
+                    <div class="bt-tickerActions">
+                      <button class="btn" type="button" id="presetMag7Btn">Select MAG7 + Indexes</button>
+                      <button class="btn" type="button" id="presetClearBtn">Clear</button>
+                    </div>
+                  </div>
+                </div>
               </div>
+
+              <!-- RIGHT: Inputs + status -->
+              <div class="bt-config-right">
+                <div class="bt-config-grid">
+                  <label class="small bt-field">
+                    <span class="bt-label">Strategy Select</span>
+                    <select id="strategySelect" class="input bt-input">
+                      <option value="active">Active strategy</option>
+                    </select>
+                  </label>
+
+                  <label class="small bt-field">
+                    <span class="bt-label">Timeframe</span>
+                    <select id="timeframeSelect" class="input bt-input">
+                      <option value="1m">1m</option>
+                      <option value="2m">2m</option>
+                      <option value="5m">5m</option>
+                      <option value="15m">15m</option>
+                      <option value="30m">30m</option>
+                      <option value="1h">1h</option>
+                      <option value="4h">4h</option>
+                      <option value="1d">1d</option>
+                      <option value="1w">1w</option>
+                    </select>
+                  </label>
+
+                  <label class="small bt-field">
+                    <span class="bt-label">Start Date</span>
+                    <input id="startDate" class="input bt-input" type="date" />
+                  </label>
+
+                  <label class="small bt-field">
+                    <span class="bt-label">End Date</span>
+                    <input id="endDate" class="input bt-input" type="date" />
+                  </label>
+
+                  <label class="small bt-field">
+                    <span class="bt-label">Initial Capital</span>
+                    <input id="startEquity" class="input bt-input" placeholder="10000" />
+                  </label>
+
+                  <div class="bt-field bt-runCell">
+                    <span class="bt-label" style="opacity:0; user-select:none;">Run</span>
+                    <button class="btn primary bt-runBtn" id="runBtn">Run Backtest</button>
+                  </div>
+                </div>
+
+                <!-- Inline status/meta (no box) -->
+                <div class="bt-statusRow">
+                  <span id="btStatusPill" class="pill pill-idle">Idle</span>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+
+        <!-- SUMMARY + TRADES -->
+        <div class="bt-lowerGrid">
+          <section class="card bt-card bt-summary">
+            <div class="card-head bt-card-head">
+              <div>
+                <div class="card-title">Performance Summary</div>
+              </div>
+
+              <!-- keep for JS, hide -->
               <div class="card-actions">
-                <select id="sortSelect" class="input">
+                <select id="sortSelect" class="input bt-input bt-sort" style="display:none">
                   <option value="entryTs_desc">Newest</option>
                   <option value="entryTs_asc">Oldest</option>
                   <option value="r_desc">R (high → low)</option>
@@ -110,35 +326,23 @@
               </div>
             </div>
 
-            <div id="metricsGrid" class="metricsGrid" style="margin-top: 12px;"></div>
-          </div>
-        </div>
-
-        <div class="grid-2" style="margin-top: 14px;">
-          <div class="card">
-            <div class="card-head">
-              <div>
-                <div class="card-title">Equity Curve</div>
-                <div class="card-hint">Hover the curve to see P/L and account value (assumes 1R = 1%).</div>
+            <div class="bt-summary-body">
+              <div id="metricsGrid" class="metricsGrid bt-metrics"></div>
+              <div class="bt-chartCard">
+                <canvas id="equityCanvas"></canvas>
               </div>
-              <div class="card-actions"></div>
             </div>
+          </section>
 
-            <div style="margin-top: 12px;">
-              <canvas id="equityCanvas" style="width:100%; height: 240px;"></canvas>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-head">
+          <section class="card bt-card bt-trades">
+            <div class="card-head bt-card-head">
               <div>
-                <div class="card-title">Trades</div>
-                <div class="card-hint">Detailed trades from the last run.</div>
+                <div class="card-title">Trade Log</div>
               </div>
             </div>
 
-            <div style="margin-top: 12px; overflow:auto; max-height: 340px;">
-              <table class="table">
+            <div class="bt-tradesWrap">
+              <table class="table bt-table">
                 <thead>
                   <tr>
                     <th>Ticker</th>
@@ -156,13 +360,61 @@
                 <tbody id="tradesBody"></tbody>
               </table>
             </div>
-          </div>
+          </section>
         </div>
 
-      </main>
-    </div>
+      </section>
+    </main>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/backtest.js"></script>
+
+    <!-- UI-only glue: chips synced to #tickersSelect -->
+    <script>
+      (function () {
+        const select = document.getElementById("tickersSelect");
+        const chips = document.getElementById("btTickerChips");
+        if (!select || !chips) return;
+
+        function computeSizing(n) {
+          if (n <= 8)   return { font: 16, py: 11, px: 14 };
+          if (n <= 14)  return { font: 14, py: 10, px: 12 };
+          if (n <= 20)  return { font: 12, py: 9,  px: 11 };
+          return        { font: 11, py: 8,  px: 10 };
+        }
+
+        function render() {
+          const opts = Array.from(select.options);
+          const n = Math.max(opts.length, 1);
+
+          const s = computeSizing(n);
+          chips.style.setProperty("--chipFont", s.font + "px");
+          chips.style.setProperty("--chipPadY", s.py + "px");
+          chips.style.setProperty("--chipPadX", s.px + "px");
+
+          chips.innerHTML = "";
+          for (const opt of opts) {
+            const btn = document.createElement("button");
+            btn.type = "button";
+            btn.className = "bt-chip" + (opt.selected ? " is-on" : "");
+            btn.textContent = (opt.textContent || opt.value || "").trim();
+
+            btn.addEventListener("click", () => {
+              opt.selected = !opt.selected;
+              select.dispatchEvent(new Event("change", { bubbles: true }));
+              render();
+            });
+
+            chips.appendChild(btn);
+          }
+        }
+
+        const mo = new MutationObserver(() => render());
+        mo.observe(select, { childList: true, subtree: true, attributes: true });
+
+        select.addEventListener("change", render);
+        render();
+      })();
+    </script>
   </body>
 </html>
