--- a/public/brokers.html
+++ b/public/brokers.html
@@ -376,8 +376,9 @@
       <!-- TOP BAR: keep identical structure/pattern to the rest of the app -->
       <div class="topbar">
         <div class="brand">
-          <div class="dot"></div>
-          <div>
+          <div class="brand-dot"></div>
+          <div class="brand-text">Trading Agent</div>
+        </div>
             <div style="font-weight: 800">Trading Agent</div>
             <div class="small">Brokers dashboard</div>
           </div>
