--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <header class="topbar">
       <div class="topbar-left">
         <div class="brand">
-          <span class="brand-dot"></span>
-          <span class="brand-text">Trading Agent</span>
+          <img src="/logo.PNG" class="brand-logo" alt="Logo" />
+          <div class="brand-text">Trading Agent</div>
         </div>
     
         <nav class="tabs">
@@ -33,8 +33,6 @@
           <span id="socketDot" class="status-dot"></span>
           <span id="socketText">Realtime</span>
         </div>
-    
-        <button id="themeToggle" class="btn btn-ghost" type="button">🌙</button>
       </div>
     </header>
 
