--- a/public/outcomes.html
+++ b/public/outcomes.html
@@ -15,7 +15,7 @@
     <header class="topbar">
       <div class="topbar-left">
         <div class="brand">
-          <div class="brand-dot"></div>
+          <img src="/logo.PNG" class="brand-logo" alt="Logo" />
           <div class="brand-text">Trading Agent</div>
         </div>
 
