--- a/public/rules.html
+++ b/public/rules.html
@@ -16,7 +16,7 @@
     <header class="topbar">
       <div class="topbar-left">
         <div class="brand">
-          <div class="brand-dot"></div>
+          <img src="/logo.PNG" class="brand-logo" alt="Logo" />
           <div class="brand-text">Trading Agent</div>
         </div>
 
@@ -34,8 +34,6 @@
           <div class="status-dot" id="socketDot"></div>
           <div class="status-text">Realtime</div>
         </div>
-
-        <button class="btn btn-ghost" id="themeToggle" aria-label="Toggle theme">🌙</button>
       </div>
     </header>
 
@@ -122,11 +120,6 @@
       <option value="false">False</option>
     </select>
   </label>
-
-  <!-- KEEP EVERYTHING ELSE EXACTLY AS-IS BELOW THIS POINT -->
-  <!-- Technical Filters ... (no changes, just stays inside #rulesEditor) -->
-  ...
-</div>
 
             <!-- Technical Filters -->
             <div class="sectionTitle" style="grid-column: 1 / -1;">Technical Filters</div>
