Fix timeframe single-source-of-truth for live/backtest; reset agg state on strategy changes

--- a/public/backtest.html
+++ b/public/backtest.html
@@ -261,7 +261,7 @@
 
                   <label class="small bt-field">
                     <span class="bt-label">Timeframe</span>
-                    <select id="timeframeSelect" class="input bt-input">
+                    <select id="timeframeSelect" class="input bt-input" disabled>
                       <option value="1m">1m</option>
                       <option value="2m">2m</option>
                       <option value="5m">5m</option>
@@ -288,6 +288,8 @@
                     <span class="bt-label">Initial Capital</span>
                     <input id="startEquity" class="input bt-input" placeholder="10000" />
                   </label>
+
+                  
 
                   <div class="bt-field bt-runCell">
                     <span class="bt-label" style="opacity:0; user-select:none;">Run</span>
